[project]
name = "gedi-hls-merge"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "earthaccess>=0.14.0",
    "h5py>=3.14.0",
    "netcdf4>=1.7.2",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "planetary-computer>=1.0.0",
    "pyproj>=3.7.2",
    "pystac-client>=0.9.0",
    "python-dateutil>=2.9.0.post0",
    "rasterio>=1.4.3",
    "requests>=2.32.5",
    "shapely>=2.1.1",
    "tqdm>=4.67.1",
]
